<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_folder"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_translation"
            android:icon="@drawable/ic_translation"
            android:title="@string/menu_translation" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_discussion"
            android:title="@string/menu_discussion" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_sign_out"
            android:onClick="onSignOutClicked"/>
    </group>
</menu>
